--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Aldrich|Barlow+Semi+Condensed|Jura|Righteous|Share+Tech+Mono|VT323" rel="stylesheet">
     <title>BitGames</title>
   </head>
   <body>
